MDEV-10969: innochecksum dumps core for some .ibd files due to floating point exception

Check that index has pages before using number of pages in
divide operation.